[package]
name = "mpeg2ps"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.rs/mpeg2ps"
repository = "https://github.com/constlhq/mpeg2ps"
authors = ["constlhq <const.lhq@gmail.com>"]
license = "MIT"
keywords = ["ps", "mpeg2-ps"]
description = "MPEG2-PS decoding/encoding library for Rust."

[dependencies]
trackable = "1.3.0"
byteorder = "1.5.0"
bitfield = "0.17.0"